--- a/Portfolio.html
+++ b/Portfolio.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CarlosRamirez</title>
     <link rel="stylesheet" href="Portfolio.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
@@ -24,7 +28,13 @@
         <div class="AbaEsquerda">
             <h3>Sobre mim</h3>
             <img src="https://img.freepik.com/freie-ikonen/profil_318-554048.jpg" alt="">
-            <section></section>
+            <section>
+                <p>
+                    Desenvolvedor Web em processo de aprendizagem
+                    Conhecimentos em javascript, HTML e CSS 
+                    Inglês Intermediario 
+                </p>
+            </section>
 
         </div>
         <div class="AbaDireita">
